# CKNv1

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: dual_stream.rs
docs/: PRODUCTION_ARCHITECTURE.md  TRAINING_GUIDE.md
examples/: advanced_features.rs  basic_hopf.rs  train_toy_model.rs
src/: lib.rs
src/algebra/: antipode.rs  coproduct.rs  forest.rs  hopf_algebra.rs  mod.rs  tree.rs
src/applications/: algebraic_learning.rs  blockchain.rs  dual_stream.rs  graph_generation.rs  mod.rs  molecular.rs  quantum.rs  renormalization.rs
src/core/: geometric_embeddings.rs  hopf_invariant.rs  hopf_ml.rs  mod.rs  model_config.rs  neural_hopf_flows.rs  training.rs
src/graph/: conversion.rs  features.rs  graph_data.rs  mod.rs
src/nn/: datasets.rs  edge_classifier.rs  hopf_former.rs  hopf_loss.rs  mod.rs  tree_autoencoder.rs  tree_rl.rs
src/utils/: latex_parser.rs  mod.rs
src/wasm/: mod.rs
