[package]
name = "hopf-ml"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Hopf algebra structures with neural network integration"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
once_cell = "1.20"

# Math and tensor operations
ndarray = { version = "0.16", features = ["serde"] }
num-traits = "0.2"
num-rational = { version = "0.4", features = ["serde"] }
num-complex = "0.4"

# Neural network support (optional features)
tch = { version = "0.15", optional = true }
burn = { version = "0.13", optional = true }
candle-core = { version = "0.3", optional = true }

# Graph operations
petgraph = "0.6"

# Parallel processing
rayon = "1.10"

# Visualization (optional)
plotters = { version = "0.3", optional = true }

# WebAssembly support (optional)
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }

# Blockchain hashing
sha2 = "0.10"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[features]
default = []
nn-tch = ["tch"]
nn-burn = ["burn"]
nn-candle = ["candle-core"]
viz = ["plotters"]
wasm = ["wasm-bindgen", "web-sys"]
full = ["nn-tch", "viz"]

[profile.release]
lto = true
codegen-units = 1
